# TermChess

./: Cargo.toml  HOLD.md  LICENSE  README.md
chess_api/: TODO.md
chess_api/src/: board.rs  lib.rs  movement.rs  piece.rs
chess_api/src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs
chess_api/tests/: board.rs  piece.rs
lichess_api/: Cargo.toml
lichess_api/src/: authorization.rs  challenges.rs  connection.rs  game.rs  lib.rs
term_chess/: Cargo.toml
term_chess/src/: lib.rs  main.rs
term_chess/src/board_manager/: board_manager.rs  chess_board.rs
term_chess/src/board_ui/: board_ui.rs
term_chess/src/menu/: computer_menu.rs  friend_menu.rs  main_menu.rs  quick_pairing_menu.rs
