[package]
name = "lichess_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version="2.3.1", features=["json"]}
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
tiny_http = "0.9.0"
url = "2.2.2"

base64 = "0.13.0"
rand = "0.8.4"
sha2 = "0.9.8"

chess_api = { path = "../chess_api" }
